--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.4",
+    "nodemon": "^1.18.9",
     "pg": "^7.8.0"
   },
   "devDependencies": {},
