--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.9",
+    "nodemon": "^1.18.10",
     "pg": "^7.8.0"
   },
   "devDependencies": {},
